--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,3 +1,10 @@
+3.0.4   - Update full screen nav
+          * Remove the home icon
+          * Add a option for font size
+          * Add a option for the background color + add contrast for text
+        - Hide the concrete5 link into toolbar on white-labelling
+        - Add option to disable footer login link
+        - Add a option to make regular nav FLAT
 3.0.3.3 - Last Fixes from Gumptech found's issues
           * Boxed page are responsive now
           * Fix lateral Navigations issues on mobile
