--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,3 +1,6 @@
+3.2.5   - Fix options that doesn’t save in firefox
+        - Fix the getOption error on page list Supermint Hover template
+        - Fix css error
 3.2.4   - Add imageLoaded to Transit.
         - Move hamburger & search to the right. close #44
         - Add Sidebar Header Area.
