--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,3 +1,6 @@
+3.2.5.2 - Add a option for auto-bidding mobile nav
+        - Now google fonts use secure http
+        - fix js error on stacks (imageLoaded)
 3.2.5.1 - Disable JS in dashboard pages
 3.2.5   - Fix options that doesn’t save in firefox
         - Fix the getOption error on page list Supermint Hover template
@@ -22,7 +25,7 @@
         - Add color option for Mega-menu on dropdown
         - Add mega-menu named by page parent ID
         - Add helper function for custom classes
-        - Fix the unstyled regular/large nav when another style is set on the theme option
+        - Fix the un-styled regular/large nav when another style is set on the theme option
 3.2.1   - Fix PHP 5.3 error on Session
         - Fix sliding nav autonav template Fatal error
 3.2     - Activate the clips on install
