--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,3 +1,4 @@
+3.3.1.3 - Fix Error when two FAQ black live in the same page
 3.3.1.2 - Add a option to manage logo area width
 3.3.1.1 - Fix utils package name
 3.3.1   - Fix update error
